# trading-platform

./: .env.example  .gitignore  README.md  pyproject.toml
config/: backtest.yaml  cache.yaml  data_sources.yaml  grid.yaml  signals.yaml  symbols.yaml
db/migrations/: 001_initial_schema.sql  002_signal_engine.sql  003_backtest_results.sql  004_grid_results.sql  005_hypothesis_results.sql
docs/: swing_trading_prd.docx
scripts/: fetch_sample.py
src/trade_analysis/: __init__.py  data_manager.py  exceptions.py
src/trade_analysis/analyzer/: __init__.py  evaluators.py  hypothesis.py  persistence.py
src/trade_analysis/backtester/: __init__.py  config.py  engine.py  models.py  stats.py  walk_forward.py
src/trade_analysis/cache/: parquet_cache.py
src/trade_analysis/config/: loader.py
tests/: conftest.py  test_advanced_indicators.py  test_analyzer_evaluators.py  test_analyzer_hypothesis.py  test_analyzer_integration.py  test_analyzer_persistence.py  test_backtest_config.py  test_backtest_engine.py  test_backtest_integration.py  test_backtest_models.py  test_backtest_stats.py  test_backtest_walk_forward.py  test_ccxt_provider.py  test_conditions.py  test_config_loader.py  test_data_manager.py  test_exits.py  test_grid_config.py  test_grid_integration.py  test_grid_parameters.py  test_grid_robustness.py  test_grid_runner.py  test_indicators.py  test_inverse.py  test_normalize.py  test_ohlcv.py  test_parquet_cache.py  test_regime.py  test_scoring.py  test_signal_config.py  test_signal_engine.py  test_timeframe.py  test_yfinance_provider.py
(+27 files in other folders)
